[tool.poetry]
name = "kisskh-downloader"
version = "0.1.0"
description = "Simple downloaded for https://kisskh.co/"
readme = "README.md"
authors = ["Debakar Roy <allinonedibakar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.28.2"
pydantic = "^1.10.5"
validators = "^0.20.0"
yt-dlp = "^2023.2.17"

[tool.poetry.dev-dependencies]
datamodel-code-generator = { extras = ["http"], version = "^0.17.1" }
flake8 = { version = "^6.0.0", python = ">=3.8.1,<4.0" }
flake8-bugbear = "^23.2.13"
flake8-black = "^0.3.6"
flake8-bandit = "^4.1.1"
flake8-comprehensions = "^3.10.1"
flake8-isort = "^6.0.0"
pep8-naming = "^0.13.3"
pytest-cov = "^4.0.0"
mypy = "^1.0.1"
black = "^23.1.0"
types-requests = "^2.28.11.15"

[tool.black]
line-length = 120

[tool.poetry.scripts]
kisskh = "kisskh_downloader.cli:kisskh"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
