[project]
name = "kisskh-downloader"
version = "0.1.0"
description = "Simple downloaded for https://kisskh.co/"
readme = "README.md"
authors = [{ name = "Debakar Roy", email = "allinonedibakar@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.3",
    "requests>=2.34.0",
    "pydantic>=2.13.4",
    "validators>=0.35.0",
    "yt-dlp>=2026.3.17",
    "pysrt>=1.1.2",
    "python-dotenv>=1.2.2",
    "cryptography>=48.0.0",
]

[project.scripts]
kisskh = "kisskh_downloader.cli:kisskh"

[dependency-groups]
dev = [
    "datamodel-code-generator[http]>=0.57.0",
    "flake8>=7.3.0",
    "flake8-bugbear>=25.11.29",
    "flake8-black>=0.4.0",
    "flake8-bandit>=4.1.1",
    "flake8-comprehensions>=3.17.0",
    "flake8-isort>=7.0.0",
    "pep8-naming>=0.15.1",
    "pytest-cov>=7.1.0",
    "mypy>=2.1.0",
    "black>=26.3.1",
    "types-requests>=2.33.0.20260508",
    "playwright>=1.59.0",
]

[tool.black]
line-length = 120

[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"
